[metadata]
name = viperflow
summary = OpenStack Neutron integration with VLCP SDN controller (viperflow)

[files]
packages = 
    viperflow

[entry_points]
neutron.ml2.mechanism_drivers =
    viperflow = viperflow.ml2.mech_driver:ViperflowMechanismDriver
neutron.service_plugins =
	viperflow-router = viperflow.l3.router_driver:ViperflowL3RouterPlugin

[pbr]
warnerrors = true
